After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687810 - Logs warnings when suspending
Logs warnings when suspending
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: keyboard
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2012-11-06 22:05 UTC by Cosimo Cecchi
Modified: 2012-11-07 08:59 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Cosimo Cecchi 2012-11-06 22:05:12 UTC
When suspending and resuming, I see these messages in ~/.cache/gdm/session.log

They're probably harmless, but it might be nice to minimize spurious warnings from the session log output.

Agent unregistration failed: GDBus.Error:org.bluez.Error.DoesNotExist: Does Not Exist 'g-io-error-quark'

(gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus engine: Operation was cancelled

(gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus engine: Operation was cancelled

(gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus engine: Operation was cancelled

(gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus engine: Operation was cancelled

(gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus engine: Operation was cancelled
Comment 1 Bastien Nocera 2012-11-07 08:52:37 UTC
(In reply to comment #0)
> When suspending and resuming, I see these messages in ~/.cache/gdm/session.log
> 
> They're probably harmless, but it might be nice to minimize spurious warnings
> from the session log output.
> 
> Agent unregistration failed: GDBus.Error:org.bluez.Error.DoesNotExist: Does Not
> Exist 'g-io-error-quark'

That's not from gnome-settings-daemon, but from gnome-shell's Bluetooth code.

> (gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus
> engine: Operation was cancelled
> 
> (gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus
> engine: Operation was cancelled
> 
> (gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus
> engine: Operation was cancelled
> 
> (gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus
> engine: Operation was cancelled
> 
> (gnome-settings-daemon:978): keyboard-plugin-WARNING **: Couldn't set IBus
> engine: Operation was cancelled

That's from the keyboard plugin and an easy fix.
Comment 2 Bastien Nocera 2012-11-07 08:59:48 UTC
Fixed in gnome-3-6 and master