keyboard: Don't print warnings when calls were cancelled

https://bugzilla.gnome.org/show_bug.cgi?id=687810